--- a/test-cdn.html
+++ b/test-cdn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
     <p>this is html paragrah</p>
-    <script src="https://cdn.jsdelivr.net/gh/asif771/face-recognition-models/console.log.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/asif771/face-recognition-models/test-cdn.js"></script>
 </html>
