--- a/test-cdn.html
+++ b/test-cdn.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <p>this is html paragrah</p>
+<head>
+    <title>Test CDN</title>
+</head>
+<body>
+    <p>This is an HTML paragraph.</p>
+    <!-- Correctly reference the JavaScript file -->
     <script src="https://cdn.jsdelivr.net/gh/asif771/face-recognition-models/test-cdn.js"></script>
+</body>
 </html>
